--- a/tournaments/underrated.html
+++ b/tournaments/underrated.html
@@ -75,45 +75,45 @@
                 </ul>
                 <p class="group-details">Group B</p>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/o6b5kx" target="_blank">Allison Stokke<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/o6b5kx" target="_blank">Allison Stokke<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/o6b5kx" target="_blank">Kaley Cuoco<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/o6b5kx" target="_blank">Julia Liepa<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/o6b5kx" target="_blank">Julia Liepa<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/o6b65a" target="_blank">Olivia Munn<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/o6b65a" target="_blank">Olivia Munn<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/o6b65a" target="_blank">Megan Fox<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/o6b65a" target="_blank">Dove Cameron<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/o6b65a" target="_blank">Dove Cameron<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/o6b5wx" target="_blank">Michelle Trachtenberg<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/o6b5wx" target="_blank">Michelle Trachtenberg<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/o6b5wx" target="_blank">Emily Blunt<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/o6b5wx" target="_blank">Jennifer Aniston<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/o6b5wx" target="_blank">Jennifer Aniston<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/o6b61a" target="_blank">Caylee Cowan<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/o6b61a" target="_blank">Caylee Cowan<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/o6b61a" target="_blank">Isla Fisher<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/o6b61a" target="_blank">Bryce Dallas Howard<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/o6b61a" target="_blank">Bryce Dallas Howard<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <p class="group-details">Group C</p>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Kristen Bell<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Sarah Shahi<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Chloe Grace Moretz<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o8xy52" target="_blank">Kristen Bell<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o8xy52" target="_blank">Sarah Shahi<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o8xy52" target="_blank">Chloe Grace Moretz<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Gemma Arterton<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Lili Reinhart<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Elizabeth Hurley<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o8xyjj" target="_blank">Gemma Arterton<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o8xyjj" target="_blank">Lili Reinhart<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o8xyjj" target="_blank">Elizabeth Hurley<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Felicity Jones<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Karen Gillan<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Helga Lovekaty<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o8xyf7" target="_blank">Felicity Jones<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o8xyf7" target="_blank">Karen Gillan<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o8xyf7" target="_blank">Helga Lovekaty<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Yanet Garcia<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Milana Vayntrub<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Alison Brie<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o8xyol">Yanet Garcia<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o8xyol">Milana Vayntrub<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o8xyol">Alison Brie<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <p class="group-details">Group D</p>
                  <ul class="matchup">
@@ -149,12 +149,12 @@
                     <li class="team team-top name-details"><a href="javascript:void(0);">Kate Mara<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);">Kaley Cuoco<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);">Megan Fox<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);">Emily Blunt<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);">Isla Fisher<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
                     <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
