--- a/tournaments/underrated.html
+++ b/tournaments/underrated.html
@@ -97,44 +97,44 @@
                 <p class="group-details">Group C</p>
                 <ul class="matchup">
                     <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o8xy52" target="_blank">Kristen Bell<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o8xy52" target="_blank">Sarah Shahi<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o8xy52" target="_blank">Chloe Grace Moretz<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o8xy52" target="_blank">Sarah Shahi<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o8xy52" target="_blank">Chloe Grace Moretz<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o8xyjj" target="_blank">Gemma Arterton<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o8xyjj" target="_blank">Gemma Arterton<span class="score">&nbsp;</span></a></li>
                     <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o8xyjj" target="_blank">Lili Reinhart<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o8xyjj" target="_blank">Elizabeth Hurley<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o8xyjj" target="_blank">Elizabeth Hurley<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <ul class="matchup">
                     <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o8xyf7" target="_blank">Felicity Jones<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o8xyf7" target="_blank">Karen Gillan<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o8xyf7" target="_blank">Helga Lovekaty<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o8xyf7" target="_blank">Karen Gillan<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o8xyf7" target="_blank">Helga Lovekaty<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o8xyol">Yanet Garcia<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o8xyol">Milana Vayntrub<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o8xyol">Alison Brie<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o8xyol" target="_blank">Yanet Garcia<span class="score">&nbsp;</span></a></li>
+                    <li class="loser team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o8xyol" target="_blank">Milana Vayntrub<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/o8xyol" target="_blank">Alison Brie<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <p class="group-details">Group D</p>
                  <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Emily Ratajkowski<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Nicola Cavanis<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Ashley Benson<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/obqre0" target="_blank">Emily Ratajkowski<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/obqre0" target="_blank">Nicola Cavanis<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/obqre0" target="_blank">Ashley Benson<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Lacey Chabert<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Kaya Scodelario<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Diane Kruger<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/obqrl9" target="_blank">Lacey Chabert<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/obqrl9" target="_blank">Kaya Scodelario<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/obqrl9" target="_blank">Diane Kruger<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Daisy Ridley<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Amanda Seyfried<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Zooey Deschanel<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/obqs28" target="_blank">Daisy Ridley<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/obqs28" target="_blank">Amanda Seyfried<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/obqs28" target="_blank">Zooey Deschanel<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Linda Cardellini<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Rachel Mcadams<span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);">Madelaine Petsch<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/obqrvo" target="_blank">Linda Cardellini<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/obqrvo" target="_blank">Rachel Mcadams<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/obqrvo" target="_blank">Madelaine Petsch<span class="score">&nbsp;</span></a></li>
                  </ul>
              </div>
              <!-- END ROUND ONE -->
@@ -157,12 +157,12 @@
                     <li class="team team-top name-details"><a href="javascript:void(0);">Isla Fisher<span class="score">&nbsp;</span></a></li>
                 </ul>
                 <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);">Kristen Bell<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);">Lili Reinhart<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <ul class="matchup">
-                    <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
-                    <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);">Felicity Jones<span class="score">&nbsp;</span></a></li>
+                    <li class="team team-top name-details"><a href="javascript:void(0);">Alison Brie<span class="score">&nbsp;</span></a></li>
                  </ul>
                  <ul class="matchup">
                     <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
